[gd_scene load_steps=15 format=2]

[ext_resource path="res://story/story1_bg.png" type="Texture" id=1]
[ext_resource path="res://Fonts/ArchitectsDaughter.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Music/chime-sound-7143.mp3" type="AudioStream" id=3]
[ext_resource path="res://src/levels/story1.gd" type="Script" id=4]
[ext_resource path="res://story/story1_clear.jpg" type="Texture" id=5]
[ext_resource path="res://Coin+button arrow/shadedDark25 - Copy.png" type="Texture" id=6]
[ext_resource path="res://Coin+button arrow/shadedLight25.png" type="Texture" id=7]
[ext_resource path="res://src/levels/bg_scene.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 23
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.686275, 0.443137, 0.776471, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.815686, 0.72549, 0.917647, 1 )
border_color = Color( 0.717647, 0.0470588, 0.694118, 1 )

[sub_resource type="DynamicFont" id=4]
size = 23
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.905882, 0.721569, 0.721569, 1 )
border_color = Color( 0.831373, 0.619608, 0.619608, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0.823529, 0.823529, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
visible = false
position = Vector2( 511.5, 277.5 )
scale = Vector2( 0.707639, 0.793827 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 512.5, 299.5 )
scale = Vector2( 0.707639, 0.732099 )
texture = ExtResource( 5 )

[node name="chime" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Main menu" type="Button" parent="."]
margin_left = 14.0
margin_top = 538.0
margin_right = 178.0
margin_bottom = 584.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
shortcut_in_tooltip = false
text = "Main Menu"

[node name="Next" type="Button" parent="."]
visible = false
margin_left = 511.0
margin_top = 536.0
margin_right = 682.0
margin_bottom = 584.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
toggle_mode = true
shortcut_in_tooltip = false
text = "Next"

[node name="test" type="TextureButton" parent="."]
margin_left = 959.0
margin_top = 17.0
margin_right = 1004.0
margin_bottom = 63.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true

[node name="Background music" parent="." instance=ExtResource( 8 )]

[connection signal="mouse_entered" from="Main menu" to="." method="_on_Main_menu_mouse_entered"]
[connection signal="mouse_exited" from="Main menu" to="." method="_on_Main_menu_mouse_exited"]
[connection signal="pressed" from="Main menu" to="." method="_on_Main_menu_pressed"]
[connection signal="mouse_entered" from="Next" to="." method="_on_Next_mouse_entered"]
[connection signal="mouse_exited" from="Next" to="." method="_on_Next_mouse_exited"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="mouse_entered" from="test" to="." method="_on_Next_mouse_entered"]
[connection signal="mouse_exited" from="test" to="." method="_on_Next_mouse_exited"]
[connection signal="pressed" from="test" to="." method="_on_test_pressed"]
